--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Countdown to Disney Christmas</title>
+	<title>Countdown to Birthday!</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 </head>
 <body>
 
 	<div class="container">
 
-		<h1>Countdown til Christmas</h1>
+		<h1>Countdown til Birthday</h1>
 
 		<div id="timer-div">
 			<div class="time-unit">
@@ -31,6 +32,10 @@
 				<span class="seconds"></span>
 				<span class="smalltext">Seconds</span>
 			</div>
+		</div>
+
+		<div class="picture">
+			<img src="birthday.jpg" />
 		</div>
 
 	</div>
